toolchain/internal/core/analysis/testdata/errors/cycles/array_cycle.vdl
// @expect: E601
// @expect: E601
// Arrays do NOT break type cycles - circular references are always forbidden

type TreeNode {
  value: string
  children: TreeNode[]
}

type LinkedList {
  value: int
  next?: LinkedList[]
}
